# epoxy

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust-clippy.yml
epoxy/: Cargo.toml
epoxy/examples/: ui.rs
epoxy/examples/systemd/: epoxy.service  epoxy.socket
epoxy/src/: config.rs  lib.rs  main.rs  nss.rs  pin.rs  server.rs  ui.rs  xmlsec.rs
epoxy/src/config/: clap_value.rs
epoxy/src/proto/: requests.rs  responses.rs
epoxy/systemd/: epoxy.service  epoxy.socket
xmlsec-nss-sys/: Cargo.toml  build.rs
xmlsec-nss-sys/src/: lib.h
