[package]
name = "epoxy"
version = "0.3.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
blake3 = "1.8"
clap = { version = "4.5", features = ["derive", "string"] }
dirs = "6.0"
futures = "0.3"
gtk4 = { version = "0.10", optional = true }
hex = "0.4"
libxml = "0.3"
oneshot = { version = "0.1", optional = true }
rpassword = "7.4"
sd-notify = { version = "0.4", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
serde_with = { version = "3.16", features = ["base64"] }
thiserror = "2.0"
tokio = { version = "1.49", features = ["macros", "rt"] }
tokio-debouncer = "0.3"
tokio-stream = { version = "0.1", features = ["net"] }
tokio-tungstenite = "0.28"
tokio-util = "0.7"
toml = "0.9"
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "tracing-log"] }
tungstenite = "0.28"
x509-parser = "0.18"
xmlsec-nss-sys = { path = "../xmlsec-nss-sys" }

[features]
default = ["systemd", "ui-gtk"]
systemd = ["dep:sd-notify"]
ui-gtk = ["dep:gtk4", "dep:oneshot"]
